# chesscpp

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Move.cpp  Move.h  Piece.cpp  Piece.h  README.md  chess_constants.h  helper.cpp  helper.h  main.cpp  move_utils.cpp  move_utils.h  static_evaluation.cpp  static_evaluation.h
chess-vision/: main.py
chess-vision/sprites/: rename.py
chess-vision/view/: drawer.py
perf/: myPerft.txt  mySorted.txt  perf.cpp  st.txt  stSorted.txt
